ProyectoIndividual/force-app/main/default/objects/Question_Response__c/Question_Response__c.object-meta.xml
<CustomObject>
    <label>Question_Response</label>
    <nameField>
        <displayFormat>QR - {0000}</displayFormat>
        <label>Question_Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question_Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>