ProyectoIndividual/force-app/main/default/objects/Question_Response__c/fields/Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Question_Id__c</fullName>
    <label>Question Id</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question_Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>