ProyectoIndividual/force-app/main/default/objects/Question_Response__c/fields/Unit_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>Unit_Response_Id__c</fullName>
    <label>Unit Response Id</label>
    <referenceTo>Unit_Response__c</referenceTo>
    <relationshipLabel>Question_Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>